updated github actions yaml files

--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -27,16 +27,16 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: infrastructure
+        working-directory: Infrastructure
 
       - name: Terraform Format
         run: terraform fmt -check
-        working-directory: infrastructure
+        working-directory: Infrastructure
 
       - name: Terraform Validate
         run: terraform validate
-        working-directory: infrastructure
+        working-directory: Infrastructure
 
       - name: Terraform Plan
         run: terraform plan
-        working-directory: infrastructure
+        working-directory: Infrastructure
