--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -27,16 +27,16 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: infrastructure
+        working-directory: Infrastructure
 
       - name: Terraform Format
         run: terraform fmt -check
-        working-directory: infrastructure
+        working-directory: Infrastructure
 
       - name: Terraform Validate
         run: terraform validate
-        working-directory: infrastructure
+        working-directory: Infrastructure
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
-        working-directory: infrastructure
+        working-directory: Infrastructure
